# flask-todolist

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  Jenkinsfile  LICENSE  Pipfile  README.md  ali.txt  api.py  appspec.yml  buildspec.yml  config.cfg  config.py  docker-compose.yml  index.html  justfile  manage.py  params.json  pyproject.toml  requirements.in  requirements.txt  test-requirements.txt  test_todolist.py  todolist.py
.github/workflows/: ci.yml  tests.yml
app/: __init__.py  decorators.py  models.py
app/api/: __init__.py  errors.py  views.py
app/auth/: __init__.py  forms.py  views.py
app/filters/: __init__.py  filters.py
app/main/: __init__.py  forms.py  views.py
app/static/css/: custom.css  table.css
app/static/js/: jquery.tablesorter.js  jquery.tablesorter.min.js  lists.js  site.js  todolist.js
app/templates/: 403.html  404.html  500.html  base.html  error.html  index.html  login.html  overview.html  register.html  stats.html  todo.html  todolist.html  user.html
app/util/: __init__.py  filters.py
app/utils/: __init__.py  errors.py  filters.py
demo/: demo.md  demo2.md
docs/: Makefile  conf.py  index.rst  make.bat
docs/uml/: createitem.puml  sequence.puml  sequence_create_task.puml  sequence_login.puml  sequence_register.puml
evaluasi/blackbox/: test_blackboxlogin.py  test_result.txt
evaluasi/etikadanlisensi/: etika_lisensi.txt
evaluasi/sus/: analisis.txt
migrations/: env.py
migrations/versions/: 2e9715729d18_.py  3f49ec5d1299_.py  c429fc7965b_.py  eff90419b076_.py
scripts/: test_cont.ps1  test_cont.sh
static/js/: site.js
templates/: base.html  index.html  layout.html  login.html  register.html  show_todo.html  show_user.html
tests/: conftest.py  test.sh  test_api.py  test_basics.py  test_client.py
utils/: fake_generator.py
