[project]
name = "flask-todolist"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "flask-testing==0.8.1",
    "forgerypy==0.1",
]
