[project]
name = "flask-todolist"
version = "0.1.0"
description = "A simple to-do list web application built with Flask"
requires-python = ">=3.14"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "forgerypy==0.1",
    "pytest>=8.3.0",
    "pytest-flask>=1.3.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py314"
exclude = ["migrations"]
