[project]
name = "flask-todolist"
version = "0.1.0"
description = "A simple to-do list web application built with Flask"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.3.0",
    "gunicorn>=25.3.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "werkzeug>=3.1.8",
    "wtforms>=3.2.1",
]

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "forgerypy==0.1",
    "pytest>=9.0.3",
    "pytest-flask>=1.3.0",
    "ruff>=0.15.12",
    "ty>=0.0.32",
]

[tool.deptry.per_rule_ignores]
DEP002 = ["email-validator", "gunicorn"]
DEP004 = ["pytest", "forgery_py"]

[tool.deptry.package_module_name_map]
python-dotenv = "dotenv"
forgerypy = "forgery_py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ty.src]
include = ["app", "config.py", "todolist.py"]
exclude = ["tests", "migrations"]

[tool.ruff]
line-length = 88
target-version = "py314"
exclude = ["migrations"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E402", "F401"]
